fix: adjust title alignment and update heading font sizes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,10 @@ main {
   padding: 3em 1em;
 }
 
+.title {
+  text-align: left !important;
+}
+
 h1,
 h2,
 h3,
@@ -60,11 +64,11 @@ h6 {
 }
 
 h1 {
-  font-size: 3.052em;
+  font-size: 3.082em;
 }
 
 h2 {
-  font-size: 2.441em;
+  font-size: 2.4em;
 }
 
 h3 {
